--- a/src/components/calendar/calendar.module.css
+++ b/src/components/calendar/calendar.module.css
@@ -11,6 +11,8 @@
 .container{
     display: flex;
     flex-direction: column;
+    padding: 10px;
+    background-color: black;
 }
 
 .colorDisplay{
