--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,5 @@
 body {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  background-image: url('https://i.redd.it/i0h9ke187tk31.png');
-  background-color: #000;
+  /* background-image: url('https://i.redd.it/i0h9ke187tk31.png'); */
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
