--- a/src/components/Calendar/Day/Day.module.scss
+++ b/src/components/Calendar/Day/Day.module.scss
@@ -1,7 +1,8 @@
 .day{
     font-size: 2rem;
     color: transparent;
-    padding: 10px;
+    padding: 5px;
+    border: 5px solid transparent;
 }
 
 .currentMonthDay{
@@ -12,5 +13,4 @@
     color:#eb1b57;
     border: 5px solid #eb1b57;
     border-radius: 50%;
-    padding: 5px;
 }
